tests/baselines/reference/errorMessagesIntersectionTypes03.errors.txt
tests/cases/compiler/errorMessagesIntersectionTypes03.ts(17,5): error TS2322: Type 'A & B' is not assignable to type 'T'.
  'A & B' could be instantiated with an arbitrary type which could be unrelated to 'T'.
tests/cases/compiler/errorMessagesIntersectionTypes03.ts(18,5): error TS2322: Type 'A & B' is not assignable to type 'U'.
  'A & B' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint 'A'.
tests/cases/compiler/errorMessagesIntersectionTypes03.ts(19,5): error TS2322: Type 'A & B' is not assignable to type 'V'.
  'A & B' is assignable to the constraint of type 'V', but 'V' could be instantiated with a different subtype of constraint 'A'.
tests/cases/compiler/errorMessagesIntersectionTypes03.ts(22,5): error TS2322: Type 'T & B' is not assignable to type 'U'.
  'T & B' could be instantiated with an arbitrary type which could be unrelated to 'U'.
tests/cases/compiler/errorMessagesIntersectionTypes03.ts(23,5): error TS2322: Type 'T & B' is not assignable to type 'V'.
  'T & B' could be instantiated with an arbitrary type which could be unrelated to 'V'.


==== tests/cases/compiler/errorMessagesIntersectionTypes03.ts (5 errors) ====
    interface A {
        a;
    }
    
    interface B {
        b;
    }
    
    function f<T, U extends A, V extends U>(): void {
        let t: T;
        let u: U;
        let v: V;
    
        let a_and_b: A & B;
        let t_and_b: T & B;
    
        t = a_and_b;
        ~
!!! error TS2322: Type 'A & B' is not assignable to type 'T'.
!!! error TS2322:   'A & B' could be instantiated with an arbitrary type which could be unrelated to 'T'.
        u = a_and_b;
        ~
!!! error TS2322: Type 'A & B' is not assignable to type 'U'.
!!! error TS2322:   'A & B' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint 'A'.
        v = a_and_b;
        ~
!!! error TS2322: Type 'A & B' is not assignable to type 'V'.
!!! error TS2322:   'A & B' is assignable to the constraint of type 'V', but 'V' could be instantiated with a different subtype of constraint 'A'.
    
        t = t_and_b;
        u = t_and_b;
        ~
!!! error TS2322: Type 'T & B' is not assignable to type 'U'.
!!! error TS2322:   'T & B' could be instantiated with an arbitrary type which could be unrelated to 'U'.
        v = t_and_b;
        ~
!!! error TS2322: Type 'T & B' is not assignable to type 'V'.
!!! error TS2322:   'T & B' could be instantiated with an arbitrary type which could be unrelated to 'V'.
    }